// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Just an overflower 1`] = `
.c0 {
  display: inline-block;
  overflow: hidden;
  box-sizing: border-box;
  max-width: 100%;
  height: 1.5em;
  line-height: 1.5em;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c0__Original {
  display: inline;
}

.c0_Overflow {
  display: none;
}

@supports (-webkit-flex-wrap:wrap) or (-ms-flex-wrap:wrap) or (flex-wrap:wrap) {
  .c0 {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }

  .c0__Original {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
  }

  .c0__Original:first-child {
    overflow: hidden;
    text-overflow: ellipsis;
  }

  .c0__Overflow {
    display: block;
    overflow: hidden;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    width: 0;
    text-overflow: ellipsis;
  }
}

<span
  className="c0"
>
  <span
    aria-hidden={true}
    className="__Overflow c0__Overflow"
    title="Some very long text"
  >
    Short text
  </span>
  <span
    className="__Original c0__Original"
  >
    Some very long text
  </span>
</span>
`;

exports[`Just an overflower without overflow 1`] = `
.c0 {
  display: inline-block;
  overflow: hidden;
  box-sizing: border-box;
  max-width: 100%;
  height: 1.5em;
  line-height: 1.5em;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c0__Original {
  display: inline;
}

.c0_Overflow {
  display: none;
}

@supports (-webkit-flex-wrap:wrap) or (-ms-flex-wrap:wrap) or (flex-wrap:wrap) {
  .c0 {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }

  .c0__Original {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
  }

  .c0__Original:first-child {
    overflow: hidden;
    text-overflow: ellipsis;
  }

  .c0__Overflow {
    display: block;
    overflow: hidden;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    width: 0;
    text-overflow: ellipsis;
  }
}

<span
  className="c0"
>
  <span
    className="__Original c0__Original"
  >
    Some very long text
  </span>
</span>
`;
